# Personal-assistant

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  test.py  trades.json
personal_assistant/: .env  .env.example  news.json  requirements.txt  sports_news.json
personal_assistant/addressbook/: forms.py  models.py  urls.py  views.py
personal_assistant/addressbook/migrations/: 0001_initial.py  0002_contact_address_contact_birthday_alter_contact_user.py
personal_assistant/addressbook/static/addressbook/: main.css
personal_assistant/addressbook/templates/addressbook/: base.html  confirm_delete.html  edit_contact.html  index.html
personal_assistant/app_auth/: apps.py  forms.py  urls.py  utils.py  views.py
personal_assistant/app_auth/templates/app_auth/: login.html  logout.html  password_reset.html  password_reset_complete.html  register.html  (+2 more)
personal_assistant/file_manager/: forms.py  models.py  urls.py  views.py
personal_assistant/file_manager/migrations/: 0001_initial.py  0002_uploadedfile_folder.py  0003_alter_uploadedfile_file.py  0004_uploadedfile_category.py  0005_uploadedfile_user.py
personal_assistant/news/: models.py  urls.py  utils.py  views.py
personal_assistant/news/migrations/: 0001_initial.py  0002_delete_news.py
personal_assistant/notebook/: forms.py  models.py  urls.py  views.py
personal_assistant/notebook/migrations/: 0001_initial.py  0002_note_user.py  0003_tag_user.py  0004_alter_note_user_alter_tag_user.py
personal_assistant/personal_assistant/: settings.py  urls.py  wsgi.py
staticfiles/news/: main.css
(+21 files in other folders)
