[tool.poetry]
name = "web-project-8"
version = "0.1.0"
description = ""
authors = ["m1hanch <misha5264@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"

requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
boto3 = "^1.34.18"
django-storages = "^1.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
